edit collection wine content

--- a/collection.section-wine-content.partial.html
+++ b/collection.section-wine-content.partial.html
@@ -68,53 +68,57 @@
                 </div>
             </div>
         </div>
- <!--       <div class="wine-category" id="red-wine">
+        <div class="wine-category" id="red-wine">
             <em>~ Red Wine ~</em>
         </div>
         <div class="red-wine">
             <div class="left-list-red-wine">
                 <div class="wine-list">
                     <div class="wine-item">
-                        <em class="wine-name">2016 Cabernet Sauvignon</em>
-                        <span class="wine-description">Rich and robust with intense flavors of dark fruit, black
-                            pepper, and oak.</span>
-                        <span class="wine-price">$75</span>
+                        <div class="wine-name--price">
+                            <em class="wine-name">2016 Cabernet Sauvignon</em>
+                            <span class="wine-price">$75</span>
+                        </div>
+                        <span class="wine-description">Rich and robust with intense flavors of dark fruit, black pepper, and oak.</span>
                     </div>
                     <div class="wine-item">
-                        <em class="wine-name">2013 Wild Card Red</em>
-                        <span class="wine-description">Bold and velvety, boasting aromas of ripe cherries, plums,
-                            and
-                            vanilla.</span>
-                        <span class="wine-price">$62</span>
+                        <div class="wine-name--price">
+                            <em class="wine-name">2013 Wild Card Red</em>
+                            <span class="wine-price">$62</span>
+                        </div>
+                        <span class="wine-description">Bold and velvety, boasting aromas of ripe cherries, plums, and vanilla.</span>
                     </div>
                     <div class="wine-item">
-                        <em class="wine-name">2015 Ultimate Pinot Noir</em>
-                        <span class="wine-description">Medium-bodied with notes of blackberry, cedar, and
-                            spice.</span>
-                        <span class="wine-price">$70</span>
+                        <div class="wine-name--price">
+                            <em class="wine-name">2015 Ultimate Pinot Noir</em>
+                            <span class="wine-price">$70</span>
+                        </div>
+                        <span class="wine-description">Medium-bodied with notes of blackberry, cedar, and spice.</span>
                     </div>
                 </div>
             </div>
             <div class="right-list-red-wine">
                 <div class="wine-list">
                     <div class="wine-item">
-                        <em class="wine-name">2015 Texas High Plains Red</em>
-                        <span class="wine-description">Lively and elegant with flavors of ripe currants, tobacco,
-                            and
-                            chocolate.</span>
-                        <span class="wine-price">$55</span>
+                        <div class="wine-name--price">
+                            <em class="wine-name">2015 Texas High Plains Red</em>
+                            <span class="wine-price">$55</span>
+                        </div>
+                        <span class="wine-description">Lively and elegant with flavors of ripe currants, tobacco, and chocolate.</span>
                     </div>
                     <div class="wine-item">
-                        <em class="wine-name">2013 The Aussie Red</em>
-                        <span class="wine-description">Rich and powerful, with aromas of black currants, figs, and
-                            herbs.</span>
-                        <span class="wine-price">$67</span>
+                        <div class="wine-name--price">
+                            <em class="wine-name">2013 The Aussie Red</em>
+                            <span class="wine-price">$67</span>
+                        </div>
+                        <span class="wine-description">Rich and powerful, with aromas of black currants, figs, and herbs.</span>
                     </div>
                     <div class="wine-item">
-                        <em class="wine-name">2014 Grenache Syrah</em>
-                        <span class="wine-description">Deep and earthy, with hints of blackberry, oak, and licorice.
-                        </span>
-                        <span class="wine-price">$75</span>
+                        <div class="wine-name--price">
+                            <em class="wine-name">2014 Grenache Syrah</em>
+                            <span class="wine-price">$75</span>
+                        </div>
+                        <span class="wine-description">Deep and earthy, with hints of blackberry, oak, and licorice.</span>
                     </div>
                 </div>
             </div>
@@ -126,130 +130,149 @@
             <div class="left-list-rose-wine">
                 <div class="wine-list">
                     <div class="wine-item">
-                        <em class="wine-name">2018 Texas High Plains Rose</em>
+                        <div class="wine-name--price">
+                            <em class="wine-name">2018 Texas High Plains Rose</em>
+                            <span class="wine-price">$43</span>
+                        </div>
                         <span class="wine-description">Aromatic and floral with a splash of fruity sweetness.</span>
-                        <span class="wine-price">$43</span>
                     </div>
                     <div class="wine-item">
-                        <em class="wine-name">2017 Chef Rudy Rose</em>
+                        <div class="wine-name--price">
+                            <em class="wine-name">2017 Chef Rudy Rose</em>
+                            <span class="wine-price">$52</span>
+                        </div>
                         <span class="wine-description">Soft and supple, with notes of strawberries and cream.</span>
-                        <span class="wine-price">$52</span>
                     </div>
                     <div class="wine-item">
-                        <em class="wine-name">2015 Vitiano Rosato</em>
-                        <spanp class="wine-description">Balanced and smooth, with delicate aromas of ripe
-                            raspberries.
-                            </span>
-                        <span class="wine-price">$60</span>
+                        <div class="wine-name--price">
+                            <em class="wine-name">2015 Vitiano Rosato</em>
+                            <span class="wine-price">$60</span>
+                        </div>
+                        <span class="wine-description">Balanced and smooth, with delicate aromas of ripe raspberries.</span>
                     </div>
                 </div>
             </div>
             <div class="right-list-rose-wine">
                 <div class="wine-list">
                     <div class="wine-item">
-                        <em class="wine-name">2012 Winters's Hill Estate Dry Rose</em>
-                        <span class="wine-description">A light and refreshing rose with hints of citrus and
-                            peach.</span>
-                        <span class="wine-price">$55</span>
+                        <div class="wine-name--price">
+                            <em class="wine-name">2012 Winters's Hill Estate Dry Rose</em>
+                            <span class="wine-price">$55</span>
+                        </div>
+                        <span class="wine-description">A light and refreshing rose with hints of citrus and peach.</span>
                     </div>
                     <div class="wine-item">
-                        <em class="wine-name">2014 Wolffer Estate Rose</em>
-                        <span class="wine-description">Rich and dry, with a bouquet of ripe strawberry and
-                            cranberry.</span>
-                        <span class="wine-price">$59</span>
+                        <div class="wine-name--price">
+                            <em class="wine-name">2014 Wolffer Estate Rose</em>
+                            <span class="wine-price">$59</span>
+                        </div>
+                        <span class="wine-description"> Rich and dry, with a bouquet of ripe strawberry and cranberry.</span>
                     </div>
                     <div class="wine-item">
-                        <em class="wine-name">2015 Ehlers Estate Sylviane Rose</em>
-                        <span class="wine-description">Crisp and fruity, with a hint of watermelon and
-                            wildflowers.</span>
-                        <span class="wine-price">$67</span>
+                        <div class="wine-name--price">
+                            <em class="wine-name">2015 Ehlers Estate Sylviane Rose</em>
+                            <span class="wine-price">$75</span>
+                        </div>
+                        <span class="wine-description">Crisp and fruity, with a hint of watermelon and wildflowers.</span>
                     </div>
                 </div>
             </div>
         </div>
-        <div class="wine-category">
+       <div class="wine-category">
             <em>~ Sparkling Wine ~</em>
         </div>
         <div class="sparkling-wine">
             <div class="left-list-sparkling-wine">
                 <div class="wine-list">
                     <div class="wine-item">
-                        <em class="wine-name">Roederer Estate Brut</em>
-                        <span class="wine-description">Enjoy a light and crisp sip of bubbly with this effervescent
-                            sparkling brut.</span>
-                        <span class="wine-price">$83</span>
+                        <div class="wine-name--price">
+                            <em class="wine-name">Roederer Estate Brut</em>
+                            <span class="wine-price">$83</span>
+                        </div>
+                        <span class="wine-description">Enjoy a light and crisp sip of bubbly with this effervescent sparkling brut.</span>
                     </div>
                     <div class="wine-item">
-                        <em class="wine-name">Brundlmayer Extra Brut</em>
-                        <span class="wine-description">Indulge in a luxurious sip of bubbly with this decadent
-                            sparkling brut.</span>
-                        <span class="wine-price">$75</spanp>
+                        <div class="wine-name--price">
+                            <em class="wine-name">Brundlmayer Extra Brut</em>
+                            <span class="wine-price">$75</span>
+                        </div>
+                        <span class="wine-description">Indulge in a luxurious sip of bubbly with this decadent sparkling brut.</span>
                     </div>
                 </div>
             </div>
             <div class="right-list-sparkling-wine">
                 <div class="wine-list">
                     <div class="wine-item">
-                        <em class="wine-name">Mumm Napa Blanc de Blancs</em>
-                        <span class="wine-description">Savor a creamy sip of bubbly with this inviting sparkling
-                            brut.</span>
-                        <span class="wine-price">$69</span>
+                        <div class="wine-name--price">
+                            <em class="wine-name">Mumm Napa Blanc de Blancs</em>
+                            <span class="wine-price">$69</span>
+                        </div>
+                        <span class="wine-description">Savor a creamy sip of bubbly with this inviting sparkling brut.</span>
                     </div>
                     <div class="wine-item">
-                        <em class="wine-name">Domaine Chandon Etoile Brut</em>
-                        <span class="wine-description">Treat yourself to a fruity sip of bubbly with this delightful
-                            sparkling brut.</span>
-                        <span class="wine-price">$72</span>
+                        <div class="wine-name--price">
+                            <em class="wine-name">Domaine Chandon Etoile Brut</em>
+                            <span class="wine-price">$72</span>
+                        </div>
+                        <span class="wine-description">Treat yourself to a fruity sip of bubbly with this delightful sparkling brut.</span>
                     </div>
                 </div>
             </div>
         </div>
-        <div class="wine-category">
+         <div class="wine-category">
             <em>~ Canned Wine ~</em>
         </div>
         <div class="canned-wine">
             <div class="left-list-canned-wine">
                 <div class="wine-list">
                     <div class="wine-item">
-                        <em class="wine-name">Prettiest Can</em>
-                        <span class="wine-description">A light and crisp blend of white grapes, perfect for a summer
-                            picnic.</span>
-                        <span class="wine-price">$13</span>
+                        <div class="wine-name--price">
+                            <em class="wine-name">Prettiest Can</em>
+                            <span class="wine-price">$13</span>
+                        </div>
+                        <span class="wine-description">A light and crisp blend of white grapes, perfect for a summer picnic.</span>
                     </div>
                     <div class="wine-item">
-                        <em class="wine-name">PN Frico By Scarpetta</em>
-                        <span class="wine-description">A sweet and fruity blend of rosé grapes, perfect for a night
-                            out.</span>
-                        <span class="wine-price">$18</span>
+                        <div class="wine-name--price">
+                            <em class="wine-name">PN Frico By Scarpetta</em>
+                            <span class="wine-price">$18</span>
+                        </div>
+                        <span class="wine-description">A sweet and fruity blend of rosé grapes, perfect for a night out.</span>
                     </div>
                     <div class="wine-item">
-                        <em class="wine-name">Ready-to-drink Malbeco</em>
-                        <span class="wine-description">A robust and flavorful Argentinian red, perfect for a night
-                            in.</span>
-                        <span class="wine-price">$15</span>
+                        <div class="wine-name--price">
+                            <em class="wine-name">Ready-to-drink Malbec</em>
+                            <span class="wine-price">$15</span>
+                        </div>
+                        <span class="wine-description">A robust and flavorful Argentinian red, perfect for a night in.</span>
                     </div>
                 </div>
             </div>
             <div class="right-list-canned-wine">
                 <div class="wine-list">
                     <div class="wine-item">
-                        <em class="wine-name">Ferdinand California Albariño</em>
+                        <div class="wine-name--price">
+                            <em class="wine-name">Ferdinand California Albariño</em>
+                            <span class="wine-price">$15</span>
+                        </div>
                         <span class="wine-description">Refreshing and bubbly, perfect for any celebration.</span>
-                        <span class="wine-price">$15</span>
                     </div>
                     <div class="wine-item">
-                        <em class="wine-name">Sweet Peach Sangria</em>
+                        <div class="wine-name--price">
+                            <em class="wine-name">Sweet Peach Sangria</em>
+                            <span class="wine-price">$17</span>
+                        </div>
                         <span class="wine-description">An exotic blend of white wine and sweet peach flavors.</span>
-                        <span class="wine-price">$17</span>
                     </div>
                     <div class="wine-item">
-                        <em class="wine-name">Pinot Noir Special</em>
-                        <span class="wine-description">A zesty and refreshing blend of red grapes and citrus
-                            flavors.</span>
-                        <span class="wine-price">$20</span>
+                        <div class="wine-name--price">
+                            <em class="wine-name">Pinot Noir Special</em>
+                            <span class="wine-price">$20</span>
+                        </div>
+                        <span class="wine-description">A zesty and refreshing blend of red grapes and citrus flavors.</span>
                     </div>
                 </div>
             </div>
         </div>
-    </section>-->
+    </section>
   </body>
