edit collection nearest-tasting

--- a/collection.html
+++ b/collection.html
@@ -31,59 +31,11 @@
         data-hx-swap="outerHTML"
         data-hx-get="collection.section-wine-content.partial.html"
       ></section>
-      <section class="nearest-tasting">
-        <div class="nearest-tasting__luxury-wine-img">
-          <img
-            class="nearest-tasting__luxury-wine-img__image"
-            width="600"
-            src="img/img_collection/luxury-wine.webp"
-            alt="luxury wine backgraund"
-          />
-        </div>
-        <div class="nearest-tasting__content">
-          <div class="nearest-tasting__content__title">
-            <span>~ NEAREST TASTING ~</span>
-          </div>
-          <div class="nearest-tasting__content__wine-details">
-            <span>Violet Crown Merlot.</span>
-            <span>11 September, 2023 | club members only</span>
-          </div>
-        </div>
-        <div class="nearest-tasting__description">
-          <div class="nearest-tasting__description__title">
-            <em>Description</em>
-          </div>
-          <div class="nearest-tasting__description__details">
-            <span>94% Merlot</span>
-            <span>3% Cabernet Sauvignon</span>
-            <span>2% Malbec</span>
-            <span>1% Cabernet Franc, Columbia</span>
-          </div>
-          <div class="nearest-tasting__description__food-pairings">
-            <em>Food Pairings</em>
-          </div>
-          <div class="nearest-tasting__description__food-pairings-list">
-            <span>Grilled steaks, roasted pork, chicken, and red meat.</span>
-          </div>
-        </div>
-        <div class="nearest-tasting__tasting-notes">
-          <div class="nearest-tasting__tasting-notes__title">
-            <em>Tasting Notes</em>
-          </div>
-          <div class="nearest-tasting__tasting-notes__details">
-            <span
-              >Full with destiny and bursting with flavor. Dark fruit, cherry,
-              blackberry, brimming with cedar, pipe tobacco, and earth.</span
-            >
-          </div>
-          <div class="nearest-tasting__tasting-notes__vineyards">
-            <em>Vineyards</em>
-          </div>
-          <div class="nearest-tasting__tasting-notes__vineyards-list">
-            <span>Sundance, Art Den Hoed, Goose Ridge, Weyns.</span>
-          </div>
-        </div>
-      </section>
+      <section
+        data-hx-trigger="load"
+        data-hx-swap="outerHTML"
+        data-hx-get="collection.section-nearesting-tasting.partial.html"
+      ></section>
       <section class="tasting-menu">
         <div class="tasting-menu__content">
           <div class="tasting-menu__content__header">
