--- a/about_us.section-our_team.partial.html
+++ b/about_us.section-our_team.partial.html
@@ -1,17 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+        crossorigin="anonymous"></script>
+
 </head>
+
 <body>
     <section class="our_team">
         <div class="our_team-header">
             <h1 class="our_team-header-heading_text">~OUR TEAM~</h1>
             <p class="our_team-header-main_text">Meet Our <em>Professional</em> Team.</p>
-            <p class="description">Our team is our proud. Each of the team members is dedicated to creating the finest wines.</p>
+            <p class="description">Our team is our proud. Each of the team members is dedicated to creating the finest
+                wines.</p>
         </div>
         <div class="our_team-content">
             <div class="our_team-left">
@@ -21,118 +29,145 @@
                     </div>
                     <p class="proffesion"> <em>Discoverer</em> </p>
                     <p class="name_surname"><em>John Smith</em></p>
-                    <p class="description">John Smith opened his interest in wine more than fourteen years ago working at a farm and in a wine bar.</p>
+                    <p class="description">John Smith opened his interest in wine more than fourteen years ago working
+                        at a farm and in a wine bar.</p>
                     <div class="accordion accordion-flush" id="accordionFlushExample">
                         <div class="accordion-item">
-                          <h2 class="accordion-header">
-                            <button
-                              class="accordion-button collapsed"
-                              type="button"
-                              data-bs-toggle="collapse"
-                              data-bs-target="#flush-collapseOne"
-                              aria-expanded="false"
-                              aria-controls="flush-collapseOne"
-                            >
-                              <p class="button_text">Read more</p>
-                            </button>
-                          </h2>
-                          <div
-                            id="flush-collapseOne"
-                            class="accordion-collapse collapse"
-                            data-bs-parent="#accordionFlushExample"
-                          >
-                            <div class="accordion-body description">
-                              His urge to get closer to the action led him to Texas where he was
-                              inspired by the best winery owners and winemaking professionals
-                              while building and managing their wine programs for several local
-                              restaurants. Smith decided to deepen his interest in winemaking
-                              industry and gained a Certificate in Viticulture from the Santa Rosa
-                              Junior College. Next he pursued a degree in Enology, Plant Science,
-                              and Chemistry, and gained winemaking experience while also
-                              experimenting with his favorite wine in his own backyard project
-                              with his wife, Mary. Finally, he embarked upon an extensive search
-                              throughout the area for a suitable location to start a commercial
-                              vineyard. That was a foundation of the Pinot Noir Winery.
+                            <h2 class="accordion-header">
+                                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                                    data-bs-target="#flush-collapseOne" aria-expanded="false"
+                                    aria-controls="flush-collapseOne">
+                                    <p class="button_text">Read more</p>
+                                </button>
+                            </h2>
+                            <div id="flush-collapseOne" class="accordion-collapse collapse"
+                                data-bs-parent="#accordionFlushExample">
+                                <div class="accordion-body description">
+                                    His urge to get closer to the action led him to Texas where he was
+                                    inspired by the best winery owners and winemaking professionals
+                                    while building and managing their wine programs for several local
+                                    restaurants. Smith decided to deepen his interest in winemaking
+                                    industry and gained a Certificate in Viticulture from the Santa Rosa
+                                    Junior College. Next he pursued a degree in Enology, Plant Science,
+                                    and Chemistry, and gained winemaking experience while also
+                                    experimenting with his favorite wine in his own backyard project
+                                    with his wife, Mary. Finally, he embarked upon an extensive search
+                                    throughout the area for a suitable location to start a commercial
+                                    vineyard. That was a foundation of the Pinot Noir Winery.
+                                </div>
                             </div>
-                          </div>
                         </div>
-                      </div>
+                    </div>
                 </div>
             </div>
 
             <div class="our_team-right">
                 <div class="second_colomn">
                     <div class="personality">
-                        <div class="person_details">
+
+                        <div class="details">
                             <div class="person_image">
                                 <img src="img/img_about_us_our_team/jason_arnolds.jpg" alt="">
                             </div>
-                            <p class="proffesion"> <em>Head Winemaker</em> </p>
-                            <p class="name_surname"><em>Jason Arnolds</em></p>
-                            <p class="description">Jason is responsible for overseeing the production of wine from grape to bottle and for developing and maintaining quality wine.
-                            </p>
+                            <div class="name_profession_block">
+                                <p class="proffesion"> <em> Head Winemaker </em> </p>
+                                <p class="name_surname"><em>Jason Arnolds</em></p>
+                            </div>
                         </div>
+                        <div class="block_of_description">
+                            <p class="description">Albert leads tours of our winery and cellars where our wine is
+                                stored. Albert knows everything about our wines.</p>
+                        </div>
+
                     </div>
                     <div class="personality">
-                        <div class="person_details">
+
+                        <div class="details">
                             <div class="person_image">
                                 <img src="img/img_about_us_our_team/albert_drendt.jpg" alt="">
                             </div>
-                            <p class="proffesion"> <em> Tour Guide  </em> </p>
-                            <p class="name_surname"><em>Albert Drendt</em></p>
-                            <p class="description">Albert leads tours of our winery and cellars where our wine is stored. Albert knows everything about our wines.
-                            </p>
+                            <div class="name_profession_block">
+                                <p class="proffesion"> <em> Tour Guide </em> </p>
+                                <p class="name_surname"><em>Albert Drendt</em></p>
+                            </div>
                         </div>
+                        <div class="block_of_description">
+                            <p class="description">Albert leads tours of our winery and cellars where our wine is
+                                stored. Albert knows everything about our wines.</p>
+                        </div>
+
                     </div>
                     <div class="personality">
-                        <div class="person_details">
+
+                        <div class="details">
                             <div class="person_image">
                                 <img src="img/img_about_us_our_team/eliza_anderson.jpg" alt="">
                             </div>
-                            <p class="proffesion"> <em> Head of Marketing</em> </p>
-                            <p class="name_surname"><em>Eliza Anderson</em></p>
-                            <p class="description">Eliza is engaged in marketing activities and promotes our winery in social networks. She plans promotions and events.
-                            </p>
+                            <div class="name_profession_block">
+                                <p class="proffesion"> <em> Head of Marketing </em> </p>
+                                <p class="name_surname"><em>Eliza Anderson</em></p>
+                            </div>
                         </div>
+                        <div class="block_of_description">
+                            <p class="description">Eliza is engaged in marketing activities and promotes our winery in social networks. She plans promotions and events.</p>
+                        </div>
+
                     </div>
                 </div>
                 <div class="third_colomn">
                     <div class="personality">
-                        <div class="person_details">
+
+                        <div class="details">
                             <div class="person_image">
                                 <img src="img/img_about_us_our_team/samantha_welsh.jpg" alt="">
                             </div>
-                            <p class="proffesion"> <em>Sommelier</em> </p>
-                            <p class="name_surname"><em>Samantha Welsh</em></p>
-                            <p class="description">Samantha is a skilled professional trained in all aspects of wine and food pairing, selection, storage, and wine tasting.
-                            </p>
+                            <div class="name_profession_block">
+                                <p class="proffesion"> <em> Sommelier </em> </p>
+                                <p class="name_surname"><em>Samantha Welsh</em></p>
+                            </div>
                         </div>
+                        <div class="block_of_description">
+                            <p class="description">Samantha is a skilled professional trained in all aspects of wine and food pairing, selection, storage, and wine tasting.</p>
+                        </div>
+
                     </div>
                     <div class="personality">
-                        <div class="person_details">
+
+                        <div class="details">
                             <div class="person_image">
                                 <img src="img/img_about_us_our_team/carlos_kiersh.jpg" alt="">
                             </div>
-                            <p class="proffesion"> <em>Tasting Room Manager</em> </p>
-                            <p class="name_surname"><em>Carlos Kiersh</em></p>
-                            <p class="description">Carlos meets guests at the tasting and introduces them to our wines. He is fully responsible for wine tastings.
-                            </p>
+                            <div class="name_profession_block">
+                                <p class="proffesion"> <em> Tasting Room Manager </em> </p>
+                                <p class="name_surname"><em>Carlos Kiersh</em></p>
+                            </div>
                         </div>
+                        <div class="block_of_description">
+                            <p class="description">Carlos meets guests at the tasting and introduces them to our wines. He is fully responsible for wine tastings.</p>
+                        </div>
+
                     </div>
                     <div class="personality">
-                        <div class="person_details">
+
+                        <div class="details">
                             <div class="person_image">
                                 <img src="img/img_about_us_our_team/dean_williams.jpg" alt="">
                             </div>
-                            <p class="proffesion"> <em>Head Guest Relations</em> </p>
-                            <p class="name_surname"><em>Dean Williams</em></p>
+                            <div class="name_profession_block">
+                                <p class="proffesion"> <em> Head Guest Relations </em> </p>
+                                <p class="name_surname"><em>Dean Williams</em></p>
+                            </div>
+                        </div>
+                        <div class="block_of_description">
                             <p class="description">Dean is responsible for guest service and guest satisfaction after visiting our events, wine tastings, and guided tours. </p>
                         </div>
+
                     </div>
                 </div>
             </div>
         </div>
     </section>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+    <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script> -->
 </body>
+
 </html>
