Done part of block create wines with cards and fix path to bg image into abous us page

--- a/about_us.section-create_wines.partial.html
+++ b/about_us.section-create_wines.partial.html
@@ -33,7 +33,6 @@
             </div>
 
             <div class="about-us__welcome-text">
-
               <p class="welcome-text__text">
                 Testing in atmospheric wine cellars;
               </p>
@@ -41,7 +40,6 @@
               <p class="welcome-text__text">
                 Possibility to buy the best wines at the best price.
               </p>
-              
             </div>
 
             <p class="welcome-subtext">
@@ -49,7 +47,9 @@
             </p>
 
             <div class="welcome-button">
-              <a href="contact_us.html" class="welcome-button__btn">Learn More</a>
+              <a href="contact_us.html" class="welcome-button__btn"
+                >Learn More</a
+              >
             </div>
           </div>
 
@@ -60,8 +60,9 @@
                 <p class="welcome-card__text--subtitle">
                   Try the best white wine
                 </p>
-                <a href="contact_us.html">Schedule Now</a
-                >.welcome-card__text--link
+                <a class="welcome-card__text--link" href="contact_us.html"
+                  >Schedule Now</a
+                >
               </div>
             </div>
 
@@ -71,8 +72,9 @@
                 <p class="welcome-card__text--subtitle">
                   Learn more about wines.
                 </p>
-                <a href="contact_us.html">Schedule Now</a
-                >.welcome-card__text--link
+                <a class="welcome-card__text--link" href="contact_us.html"
+                  >Schedule Now</a
+                >
               </div>
             </div>
 
@@ -82,8 +84,9 @@
                 <p class="welcome-card__text--subtitle">
                   Try the best red wine.
                 </p>
-                <a href="contact_us.html">Schedule Now</a
-                >.welcome-card__text--link
+                <a class="welcome-card__text--link" href="contact_us.html"
+                  >Schedule Now</a
+                >
               </div>
             </div>
           </div>
