changed div with header

--- a/about_us.header_page.html
+++ b/about_us.header_page.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-    <div class="header_block" >
+    <header class="header_block" >
         <address class="header__address" data-hx-trigger="load" data-hx-swap="outerHTML"
             data-hx-get="common.header-address.partial.html"></address>
 
@@ -24,8 +24,8 @@
             <div class="breading">
                 <p> <span style="    color: rgba(255, 255, 255, 0.69);">Home></span> <u>About us</u></p>
             </div>
-        </div>
-    </div>
+        </header>
+    </header>
 </body>
 
 </html>
