--- a/collection.html
+++ b/collection.html
@@ -36,60 +36,11 @@
         data-hx-swap="outerHTML"
         data-hx-get="collection.section-nearesting-tasting.partial.html"
       ></section>
-      <section class="tasting-menu">
-        <div class="tasting-menu__content">
-          <div class="tasting-menu__content__header">
-            <div>
-              <span>
-                <em>~ TASTING MENU ~</em>
-              </span>
-            </div>
-            <span>Current Tasting Menu.</span>
-            <span
-              >Here's a list of the wines we usually taste during visits.</span
-            >
-          </div>
-          <div class="tasting-menu__content__list">
-            <div>
-              <ul>
-                <li class="tasting-menu__content__list-item">
-                  <span>
-                    <em>2016 Hommage Blanc</em>
-                  </span>
-                  <span>Blend: 75% Roussanne, 25% Viognier</span>
-                </li>
-                <li class="tasting-menu__content__list-item">
-                  <span>
-                    <em>2016 La Rose</em>
-                  </span>
-                  <span>Blend: 56% Grenache, 30% Mourvedre & 14% Syrah</span>
-                </li>
-                <li class="tasting-menu__content__list-item">
-                  <span>
-                    <em>2015 Fleur de Solene</em>
-                  </span>
-                  <span
-                    >Blend: 50% Syrah, 30% Cabernet Sauvignon & 20%
-                    Grenache</span
-                  >
-                </li>
-                <li class="tasting-menu__content__list-item">
-                  <span>
-                    <em>2015 Harmonie</em>
-                  </span>
-                  <span>Blend: 60% Grenache, 26% Mourvedre & 14% Syrah</span>
-                </li>
-                <li class="tasting-menu__content__list-item">
-                  <span>
-                    <em>2014 Hommage a Nos Pairs</em>
-                  </span>
-                  <span>Blend: 95% Syrah, 3% Grenache & 2% Viognier</span>
-                </li>
-              </ul>
-            </div>
-          </div>
-        </div>
-      </section>
+      <section
+        data-hx-trigger="load"
+        data-hx-swap="outerHTML"
+        data-hx-get="collection.section-tasting-menu.partial.html"
+      ></section>
       <section class="schedule">
         <div class="schedule__content">
           <div class="schedule__content__info">
