--- a/collection.section-tasting-menu.partial.html
+++ b/collection.section-tasting-menu.partial.html
@@ -24,6 +24,54 @@
           </div>
         </div>
         <div class="tasting-menu__content__list">
+          <div class="tasting-menu__content__list-item">
+            <div class="tasting-menu__content__list-item-title">
+              2016 Hommage Blanc
+            </div>
+            <div class="tasting-menu__content__list-item-description">
+              Blend: 75% Roussanne, 25% Viognier
+            </div>
+          </div>
+          <div class="tasting-menu__content__list-item">
+            <div class="tasting-menu__content__list-item-title">
+              2016 La Rose
+            </div>
+            <div class="tasting-menu__content__list-item-description">
+              Blend: 56% Grenache, 30% Mourvedre & 14% Syrah
+            </div>
+          </div>
+          <div class="tasting-menu__content__list-item">
+            <div class="tasting-menu__content__list-item-title">
+              2015 Fleur de Solene
+            </div>
+            <div class="tasting-menu__content__list-item-description">
+              Blend: 50% Syrah, 30% Cabernet Sauvignon & 20% Grenache
+            </div>
+          </div>
+          <div class="tasting-menu__content__list-item">
+            <div class="tasting-menu__content__list-item-title">
+              2015 Harmonie
+            </div>
+            <div class="tasting-menu__content__list-item-description">
+              Blend: 60% Grenache, 26% Mourvedre & 14% Syrah
+            </div>
+          </div>
+          <div class="tasting-menu__content__list-item">
+            <div class="tasting-menu__content__list-item-title">
+              2014 Hommage a Nos Pairs
+            </div>
+            <div class="tasting-menu__content__list-item-description">
+              Blend: 95% Syrah, 3% Grenache & 2% Viognier
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+  </body>
+</html>
+
+<!--
+    <div class="tasting-menu__content__list">
           <div>
             <ul>
               <li class="tasting-menu__content__list-item">
@@ -61,7 +109,4 @@
             </ul>
           </div>
         </div>
-      </div>
-    </section>
-  </body>
-</html>
+-->
