Add link to 'Contact us'

--- a/common.footer.partial.html
+++ b/common.footer.partial.html
@@ -15,9 +15,9 @@
             /></a>
           </div>
           <p class="footer__text-description">
-            Our artisan winery located in Austin, Texas is committed to producing
-            delicious, interesting, well-balanced wines with the complexity of
-            flavors. Come and join our tastings or order delvery.
+            Our artisan winery located in Austin, Texas is committed to
+            producing delicious, interesting, well-balanced wines with the
+            complexity of flavors. Come and join our tastings or order delvery.
           </p>
         </div>
         <div class="footer__contact-info">
@@ -45,7 +45,9 @@
             <li class="footer__nav-item">
               <a href="wineclub.html">WINE CLUB</a>
             </li>
-            <li class="footer__nav-item"><a href="#">CONTACTS</a></li>
+            <li class="footer__nav-item">
+              <a href="contact_us.html">CONTACTS</a>
+            </li>
           </ul>
         </nav>
         <div class="footer__copyright">© Created by | All rights Reserved</div>
