Comment create wines carousel

--- a/about_us.section-create_wines.partial.html
+++ b/about_us.section-create_wines.partial.html
@@ -25,16 +25,15 @@
 
         <!-- carousel -->
 
-        <!-- Testimonial carousel -->
-        <div
-          id="testimonial-carousel-id"
-          class="carousel slide testimonial-carousel"
+        <!-- <div
+          id="create-wines-carousel-id"
+          class="carousel slide create-wines-carousel"
           data-bs-ride="carousel"
         >
           <div class="carousel-indicators">
             <button
               type="button"
-              data-bs-target="#testimonial-carousel-id"
+              data-bs-target="#create-wines-carousel-id"
               data-bs-slide-to="0"
               class="active"
               aria-current="true"
@@ -42,122 +41,122 @@
             ></button>
             <button
               type="button"
-              data-bs-target="#testimonial-carousel-id"
+              data-bs-target="#create-wines-carousel-id"
               data-bs-slide-to="1"
               aria-label="Slide 2"
             ></button>
             <button
               type="button"
-              data-bs-target="#testimonial-carousel-id"
+              data-bs-target="#create-wines-carousel-id"
               data-bs-slide-to="2"
               aria-label="Slide 3"
             ></button>
             <button
               type="button"
-              data-bs-target="#testimonial-carousel-id"
+              data-bs-target="#create-wines-carousel-id"
               data-bs-slide-to="3"
               aria-label="Slide 4"
             ></button>
             <button
               type="button"
-              data-bs-target="#testimonial-carousel-id"
+              data-bs-target="#create-wines-carousel-id"
               data-bs-slide-to="4"
               aria-label="Slide 5"
             ></button>
           </div>
           <div class="carousel-inner">
             <div class="carousel-item active">
-              <div class="carousel__testimonial testimonial">
+              <div class="carousel__create-wines create-wines">
                 <div>
                   <img
-                    class="testimonial__img"
+                    class="create-wines__img"
                     src="img/about_us-create_wines/step1.jpg"
                     alt=""
                   />
                 </div>
-                <p class="testimonial__customer">Alice Jackson</p>
-                <p class="testimonial__comment">
+                <p class="create-wines__customer">Alice Jackson</p>
+                <p class="create-wines__comment">
                   "The scenery was beautiful and it was the perfect way to spend
                   an afternoon. I would highly recommend visiting this winery!"
                 </p>
-                <p class="testimonial__date">MARCH 25, 2023</p>
+                <p class="create-wines__date">MARCH 25, 2023</p>
               </div>
             </div>
             <div class="carousel-item">
-              <div class="carousel__testimonial testimonial">
+              <div class="carousel__create-wines create-wines">
                 <div>
                   <img
-                    class="testimonial__img"
+                    class="create-wines__img"
                     src="img/about_us-create_wines/step2.jpg"
                     alt=""
                   />
                 </div>
-                <p class="testimonial__customer">Alice Jackson</p>
-                <p class="testimonial__comment">
+                <p class="create-wines__customer">Alice Jackson</p>
+                <p class="create-wines__comment">
                   "The scenery was beautiful and it was the perfect way to spend
                   an afternoon. I would highly recommend visiting this winery!"
                 </p>
-                <p class="testimonial__date">MARCH 25, 2023</p>
+                <p class="create-wines__date">MARCH 25, 2023</p>
               </div>
             </div>
             <div class="carousel-item">
-              <div class="carousel__testimonial testimonial">
+              <div class="carousel__create-wines create-wines">
                 <div>
                   <img
-                    class="testimonial__img"
+                    class="create-wines__img"
                     src="img/about_us-create_wines/step3.jpg"
                     alt=""
                   />
                 </div>
-                <p class="testimonial__customer">Alice Jackson</p>
-                <p class="testimonial__comment">
+                <p class="create-wines__customer">Alice Jackson</p>
+                <p class="create-wines__comment">
                   "The scenery was beautiful and it was the perfect way to spend
                   an afternoon. I would highly recommend visiting this winery!"
                 </p>
-                <p class="testimonial__date">MARCH 25, 2023</p>
+                <p class="create-wines__date">MARCH 25, 2023</p>
               </div>
             </div>
             <div class="carousel-item">
-              <div class="carousel__testimonial testimonial">
+              <div class="carousel__create-wines create-wines">
                 <div>
                   <img
-                    class="testimonial__img"
+                    class="create-wines__img"
                     src="img/about_us-create_wines/step4.jpg"
                     alt=""
                   />
                 </div>
-                <p class="testimonial__customer">Amanda Willson</p>
-                <p class="testimonial__comment">
+                <p class="create-wines__customer">Amanda Willson</p>
+                <p class="create-wines__comment">
                   "I'm so happy for the opening of the Pinot Noir Winery. They
                   have a tremendous collection of the finest wines. We had a
                   really great time there and will definitely come back soon."
                 </p>
-                <p class="testimonial__date">DECEMBER 15, 2022</p>
+                <p class="create-wines__date">DECEMBER 15, 2022</p>
               </div>
             </div>
             <div class="carousel-item">
-              <div class="carousel__testimonial testimonial">
+              <div class="carousel__create-wines create-wines">
                 <div>
                   <img
-                    class="testimonial__img"
+                    class="create-wines__img"
                     src="img/about_us-create_wines/step5.jpg"
                     alt=""
                   />
                 </div>
-                <p class="testimonial__customer">Will Smith</p>
-                <p class="testimonial__comment">
+                <p class="create-wines__customer">Will Smith</p>
+                <p class="create-wines__comment">
                   "Visiting the winery was an amazing experience! The staff were
                   so friendly and knowledgeable and the wine was delicious. I've
                   already recommended Pinot Noir to my friends."
                 </p>
-                <p class="testimonial__date">JANUARY 04, 2023</p>
+                <p class="create-wines__date">JANUARY 04, 2023</p>
               </div>
             </div>
           </div>
           <button
             class="carousel-control-prev"
             type="button"
-            data-bs-target="#testimonial-carousel-id"
+            data-bs-target="#create-wines-carousel-id"
             data-bs-slide="prev"
           >
             <span class="carousel-control-prev-icon" aria-hidden="true"></span>
@@ -166,13 +165,13 @@
           <button
             class="carousel-control-next"
             type="button"
-            data-bs-target="#testimonial-carousel-id"
+            data-bs-target="#create-wines-carousel-id"
             data-bs-slide="next"
           >
             <span class="carousel-control-next-icon" aria-hidden="true"></span>
             <span class="visually-hidden">Next</span>
           </button>
-        </div>
+        </div> -->
 
         <!-- carousel -->
 
