--- a/collection.html
+++ b/collection.html
@@ -41,56 +41,11 @@
         data-hx-swap="outerHTML"
         data-hx-get="collection.section-tasting-menu.partial.html"
       ></section>
-      <section class="schedule">
-        <div class="schedule__content">
-          <div class="schedule__content__info">
-            <div>
-              <span>
-                <em>~ SCHEDULE ~</em>
-              </span>
-              <span>Schedule Your Tasting.</span>
-              <span
-                >Our Tasting Room is located on the top of the hilly vineyard
-                and offers guided tastings of all our great wine selections.
-                Come visit us to enjoy our wines and relax sipping a divine
-                drink while we take care of the rest.</span
-              >
-            </div>
-          </div>
-          <div class="schedule__content__form">
-            <div>
-              <form
-                class="schedule__content__form__form"
-                action="#"
-                method="POST"
-              >
-                <input
-                  class="schedule__content__form__form__input"
-                  type="text"
-                  required
-                  id="name"
-                  name="name"
-                  placeholder="Name"
-                />
-                <input
-                  class="schedule__content__form__form__input"
-                  type="text"
-                  required
-                  id="number"
-                  name="number"
-                  placeholder="Phone number"
-                />
-                <button
-                  class="schedule__content__form__form__submit-button"
-                  type="submit"
-                >
-                  Send a Request
-                </button>
-              </form>
-            </div>
-          </div>
-        </div>
-      </section>
+      <section
+        data-hx-trigger="load"
+        data-hx-swap="outerHTML"
+        data-hx-get="collection.section-schedule.partial.html"
+      ></section>
     </main>
   </body>
 </html>
